# nanoreth

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: docker.yml  release.yml
docs/: MAINNET_SYNC_GUIDE.md  TESTNET_SYNC_GUIDE.md
etc/evm-block-sync/: s3sync-runner.sh
scripts/: check_block_completeness.py  download_boundary_blocks.py  fetch_blocks_rpc.py  hl-visor-watchdog.sh  requirements.txt
src/: consensus.rs  lib.rs  main.rs  version.rs
src/addons/: call_forwarder.rs  hl_node_compliance.rs  mod.rs  subscribe_fixup.rs  sync_server.rs  tx_forwarder.rs  utils.rs
src/chainspec/: hl.rs  mod.rs  parser.rs
src/evm/: transaction.rs
src/evm/api/: builder.rs  ctx.rs  exec.rs  mod.rs  patch.rs
src/hardforks/: hl.rs
src/node/: cli.rs  migrate.rs  mod.rs  pool.rs
src/node/consensus/: mod.rs  reth_copy.rs
src/node/evm/: assembler.rs  config.rs  executor.rs  factory.rs  mod.rs  patch.rs  receipt_builder.rs
src/node/network/: mod.rs
src/node/network/block_import/: mod.rs  service.rs
src/node/primitives/: block.rs  body.rs  header.rs  mod.rs  rlp.rs  serde_bincode_compat.rs  transaction.rs  tx_wrapper.rs
src/node/rpc/: block.rs  call.rs  estimate.rs  mod.rs  precompile.rs  transaction.rs
src/node/rpc/engine_api/: validator.rs
src/node/spot_meta/: init.rs  mod.rs  patch.rs
src/node/storage/: mod.rs  tables.rs
src/node/types/: mod.rs  reth_compat.rs
src/pseudo_peer/: cli.rs  config.rs  mod.rs  network.rs  service.rs
src/pseudo_peer/sources/: cached.rs  local.rs  mod.rs  rpc.rs  s3.rs
src/pseudo_peer/sources/hl_node/: cache.rs  file_ops.rs  mod.rs  scan.rs  tests.rs  time_utils.rs
tests/: run_tests.sh
